--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   float: left;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .column-2 {
     width: 100%;
   }
@@ -59,7 +59,7 @@ body {
 .site-by {
   color: #FFF;
   text-decoration: none;
-  font-size: .95em;
+  font-size: .9em;
   text-align: center;
   position: absolute;
   left: 0;
@@ -67,11 +67,11 @@ body {
   bottom: 0;
   padding: 10px;
   padding-bottom: 15px;
-  width: 30%;
+  width: 33%;
   margin: auto;
   opacity: .85;
 }
-a.site-by:hover {
+a.site-by:hover, a.site-by:active, a.site-by:visited {
   color: #FFF;
   text-decoration: none;
   opacity: 1;
@@ -153,8 +153,8 @@ nav ul li:hover {
   right: 0;
   bottom: 0;
   left: 0;
-  width: 80%;
-  height: 60%;
+  width: 60%;
+  height: 40%;
   background-color: #F3F3F6;
   border-radius: 10px;
   z-index: 1;
