--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 /* General styles */
+html {
+  background-color: #F3F3F6;
+  background: url("../images/background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 800px;
+}
 body {
   /*background: #C2D4DB;*/
 }
@@ -45,11 +54,11 @@ body {
 }
 
 .icon-brand {
-  height: 60px;
+  height: 40px;
   width: auto;
   position: relative;
   margin-left: auto;
-  margin-top: 1.4em;
+  margin-top: 1em;
   margin-right: auto;
   right: 0;
   bottom: 0;
@@ -63,20 +72,21 @@ body {
 
 .section-text {
   color: #4A61A2;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .section-title {
   color: #374F59;
-  font-size: 1.4em;
+  font-size: 1.2em;
   font-weight: 300;
   border-bottom: 1px dotted #A4BEC9;
-  padding-bottom: 6px;
+  margin: 0;
+  padding-bottom: 8px;
 }
 
 .quote-text {
   color: #808080;
-  font-size: .9em;
+  font-size: .8em;
   padding: .3em;
 }
 
@@ -84,16 +94,19 @@ body {
   color: #FFF;
   text-decoration: none;
   font-size: .8em;
+  opacity: .85;
   text-align: center;
-  position: absolute;
+  position: relative;
   left: 0;
+  top: 0;
   right: 0;
   bottom: 0;
-  padding: 10px;
-  padding-bottom: 15px;
+  /*padding: 6px;*/
   width: 50%;
-  margin: auto;
-  opacity: .85;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+
 }
 a.site-by:hover, a.site-by:active, a.site-by:visited {
   color: #FFF;
@@ -127,6 +140,7 @@ a, a:hover, a:active, a:visited {
 #logo h1 {
   font-family: 'Tangerine', cursive;
   color: #F3F3F6;
+  font-weight: normal;
   letter-spacing: 2px;
   font-size: 3.5em;
   margin: 0;
@@ -153,7 +167,7 @@ nav ul li {
     padding: .75em;
     background-color: #A4BEC9;
     text-decoration: none;
-    width: 100px;
+    width: 65px;
 }
 nav ul li:hover {
     background-color: #D1DEE4;
@@ -162,23 +176,21 @@ nav ul li:hover {
 }
 
 #background {
-  background-image: url("../images/background.jpg");
+  /*background-image: url("../images/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  width: auto;
   height: 100%;
+  width: auto;*/
 }
 
 #container {
-  position: absolute;
+  position: relative;
+  margin: 2em;
   margin-left: auto;
   margin-right: auto;
-  top: 220px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 80%;
-  height: 55%;
+  width: 60%;
+  max-height: 60%;
+  overflow: auto;
   background-color: #F3F3F6;
   border-radius: 10px;
   z-index: 1;
